mas ajustes al sas

--- a/css/scss/estilos.css
+++ b/css/scss/estilos.css
@@ -53,4 +53,10 @@
 
 .card-text {
   font-size: 32px;
+}
+
+.footertext {
+  background-color: #22223B;
+  color: #C9ADA7;
+  font-family: montserrat;
 }/*# sourceMappingURL=estilos.css.map */
