--- a/css/scss/estilos.scss
+++ b/css/scss/estilos.scss
@@ -2,21 +2,5 @@
 @import "./assets/titulos";
 @import "./assets/secprincipal";
 @import "./assets/parrafos";
+@import "./assets/card";
 @import "./assets/footer";
-
-.card {
-	align-items: center;
-	align-content: center;
-}
-.card-img {
-	transition: 1s;
-	&:hover {
-		transform: scale(1.1);
-	}
-}
-.card-title {
-	font-size: 46px;
-}
-.card-text {
-	font-size: 32px;
-}
