para entrega final

--- a/css/scss/assets/_footer.scss
+++ b/css/scss/assets/_footer.scss
@@ -1,8 +1,7 @@
-$color_1: #22223B;
 $font-family_1: montserrat;
 
 .footertext {
-    background-color: $color_1;
-    color: #C9ADA7;
+    background-color:#49A078;
+    color:#C2C5D6;
     font-family: $font-family_1;
 }
