--- a/css/scss/assets/_parrafos.scss
+++ b/css/scss/assets/_parrafos.scss
@@ -4,5 +4,5 @@ $font-family_1: montserrat;
 .parrafo {
 	font-size: 20px;
     font-family: $font-family_1;
-    color: $color_1;
+    color: #C2C5D6;
 }
