--- a/css/scss/assets/_titulos.scss
+++ b/css/scss/assets/_titulos.scss
@@ -1,6 +1,3 @@
-$color_1: #22223B;
-$font-family_1: montserrat;
-
 @keyframes tracking-in-expand {
 	0% {
 		letter-spacing: -0.5em;
@@ -16,4 +13,8 @@ $font-family_1: montserrat;
 
 .tracking-in-expand {
 	animation: tracking-in-expand 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+.titulo {
+	color: #49A078;
 }
