--- a/css/scss/estilos.css
+++ b/css/scss/estilos.css
@@ -1,5 +1,5 @@
-.body {
-  background-color: #4A4E69;
+body {
+  background-color: #235789;
 }
 
 @keyframes tracking-in-expand {
@@ -18,6 +18,10 @@
   animation: tracking-in-expand 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
+.titulo {
+  color: #49A078;
+}
+
 .seccionprincipal {
   background-size: cover;
 }
@@ -26,13 +30,12 @@
   font-family: montserrat;
   font-size: 60px;
   opacity: 85%;
-  color: #22223B;
 }
 
 .parrafo {
   font-size: 20px;
   font-family: montserrat;
-  color: #22223B;
+  color: #C2C5D6;
 }
 
 .card {
@@ -56,7 +59,7 @@
 }
 
 .footertext {
-  background-color: #22223B;
-  color: #C9ADA7;
+  background-color: #49A078;
+  color: #C2C5D6;
   font-family: montserrat;
 }/*# sourceMappingURL=estilos.css.map */
